9.1. Файлы и директории. Классы Path, Files, Paths [#504936 #469011]