@@ -8,12 +8,12 @@ import java.nio.file.Paths;
 
 public class PathExample {
     public static void main(String[] args) throws IOException {
-        Path directory = Paths.get("path/paths");
+        Path directory = Paths.get("./src/data/path/paths");
         Files.createDirectories(directory);
-        Path target = Paths.get("path");
-        Path pathOne = Path.of("path/paths/path1.txt");
+        Path target = Paths.get("./src/data/path");
+        Path pathOne = Path.of("./src/data/path/paths/path1.txt");
         Files.createFile(pathOne);
-        Path pathTwo = Path.of("path/path2.txt");
+        Path pathTwo = Path.of("./src/data/path/path2.txt");
         Files.createFile(pathTwo);
         DirectoryStream<Path> paths = Files.newDirectoryStream(target);
         paths.forEach(System.out::println);
